# server/docs/swagger.yaml
@@ -1,73 +1,17 @@
 basePath: /api
 definitions:
-  ent.Repo:
+  main.createKeyPayload:
     properties:
-      edges:
-        $ref: '#/definitions/ent.RepoEdges'
-        description: |-
-          Edges holds the relations/edges for other nodes in the graph.
-          The values are being populated by the RepoQuery when eager-loading is set.
-      id:
-        description: ID of the ent.
-        type: string
-      type:
-        description: Type holds the value of the "type" field.
-        type: string
-    type: object
-  ent.RepoEdges:
-    properties:
-      rpms:
-        description: Rpms holds the value of the rpms edge.
-        items:
-          $ref: '#/definitions/ent.RpmPackage'
-        type: array
-    type: object
-  ent.RpmPackage:
-    properties:
-      arch:
-        description: Arch holds the value of the "arch" field.
-        type: string
-      edges:
-        $ref: '#/definitions/ent.RpmPackageEdges'
-        description: |-
-          Edges holds the relations/edges for other nodes in the graph.
-          The values are being populated by the RpmPackageQuery when eager-loading is set.
-      epoch:
-        description: Epoch holds the value of the "epoch" field.
-        type: string
-      file_path:
-        description: FilePath holds the value of the "file_path" field.
+      email:
         type: string
       id:
-        description: ID of the ent.
-        type: integer
+        type: string
       name:
-        description: Name holds the value of the "name" field.
         type: string
-      release:
-        description: Release holds the value of the "release" field.
-        type: string
-      version:
-        description: Version holds the value of the "version" field.
-        type: string
-    type: object
-  ent.RpmPackageEdges:
-    properties:
-      repo:
-        $ref: '#/definitions/ent.Repo'
-        description: Repo holds the value of the repo edge.
-    type: object
-  main.ErrResponse:
-    properties:
-      code:
-        description: application-specific error code
-        type: integer
-      error:
-        description: application-level error message, for debugging
-        type: string
-      status:
-        description: user-level status message
-        type: string
+    required:
+    - email
+    - id
+    - name
     type: object
   main.createRepoPayload:
     properties:
@@ -82,6 +26,34 @@ definitions:
     - id
     - type
     type: object
+  main.keyResponse:
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
+  main.repoResponse:
+    properties:
+      id:
+        type: string
+      type:
+        type: string
+    type: object
+  types.ErrResponse:
+    properties:
+      code:
+        description: application-specific error code
+        type: integer
+      error:
+        description: application-level error message, for debugging
+        type: string
+      status:
+        description: user-level status message
+        type: string
+    type: object
 info:
   contact: {}
   description: A modern package delivery server.
@@ -91,6 +63,71 @@ info:
   title: Subatomic
   version: "1.0"
 paths:
+  /keys:
+    get:
+      description: get keys
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/main.keyResponse'
+            type: array
+      summary: Get all keys
+      tags:
+      - keys
+    post:
+      consumes:
+      - application/json
+      description: create key
+      parameters:
+      - description: options for the new key
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/main.createKeyPayload'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+      summary: Create a new key
+      tags:
+      - keys
+  /keys/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get key
+      parameters:
+      - description: id for the key
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+      summary: Get a key
+      tags:
+      - keys
   /repos:
     get:
       description: get repos
@@ -101,7 +138,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/ent.Repo'
+              $ref: '#/definitions/main.repoResponse'
             type: array
       summary: Get all repos
       tags:
@@ -123,11 +160,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrResponse'
+            $ref: '#/definitions/types.ErrResponse'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/main.ErrResponse'
+            $ref: '#/definitions/types.ErrResponse'
       summary: Create a new repo
       tags:
       - repos
@@ -146,7 +183,7 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrResponse'
+            $ref: '#/definitions/types.ErrResponse'
       summary: Delete a repo
       tags:
       - repos
@@ -171,11 +208,11 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/main.ErrResponse'
+            $ref: '#/definitions/types.ErrResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrResponse'
+            $ref: '#/definitions/types.ErrResponse'
       summary: Upload files to a repo
       tags:
       - repos
@@ -194,8 +231,32 @@ paths:
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/main.ErrResponse'
+            $ref: '#/definitions/types.ErrResponse'
       summary: Get list of RPMs in a repo
+      tags:
+      - repos
+  /repos/{id}/rpms/{rpmId}:
+    delete:
+      description: delete rpm
+      parameters:
+      - description: id for the repository
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: rpm id in the repository
+        in: path
+        name: rpmId
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/types.ErrResponse'
+      summary: Delete RPM in a repo
       tags:
       - repos
 securityDefinitions:
